--- a/homePage.html
+++ b/homePage.html
@@ -5,8 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>St Andrew's Church Caversham</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/1b640705a7.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="icon" type="image/png" href="./images/church-icon.jpg">
 </head>
 <body>
-    
+    <!-- Navigation Bar -->
+    <section id="navigation">
+        <div class="container-fluid dropdown-center">
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" >
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">St Andrew's Church</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">                    
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <button type="button" class="btn btn-primary" name="services">                                <a class="nav-link active" aria-current="page" href="#">Services</a></button>
+                            </li>
+                            <li class="nav-item">
+                                <button type="button" class="btn btn-primary" name="donate">                                <a class="nav-link active" aria-current="page" href="#">Donate</a></button>
+                            </li>
+                            <li class="nav-item">
+                                <button type="button" class="btn btn-primary" name="hallHire">                                <a class="nav-link active" aria-current="page" href="#">Hall Hire</a></button>
+                            </li>
+                            <li class="nav-item">
+                                <button type="button" class="btn btn-primary" name="calender">                                <a class="nav-link active" aria-current="page" href="#">Calender</a></button>
+                            </li>
+                            <li class="nav-item">
+                                <button type="button" class="btn btn-primary" name="contactUs">                                <a class="nav-link active" aria-current="page" href="#">Contact Us</a></button>
+                            </li>
+                            <li>
+                                <button class="btn btn-primary nav-item dropdown">                                      <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    More </a>
+                                    <ul class="dropdown-menu dropdown-link-hover-color menu">
+                                        <li><a class="dropdown-item" href="#">Groups & Activities</a></li>
+                                        <li><a class="dropdown-item" href="#">EcoChurch</a></li>
+                                        <li><a class="dropdown-item" href="#">Mission</a></li>
+                                        <li><a class="dropdown-item" href="#">History</a></li>
+                                        <li><a class="dropdown-item" href="#">Links</a></li>
+                                    </ul>
+                                </button>
+                            </li>
+                        </ul>
+                        <form action="/" method="post" class="d-flex" role="search">
+                            <input type="text" class="form-control me-2" placeholder="Search" aria-label="Search" name="search">
+                            <button class="navbBtn btn btn-outline" type="Submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </section>
 </body>
 </html>
