--- a/homePage.html
+++ b/homePage.html
@@ -64,7 +64,7 @@
     </section>
 
     <!-- Main Body  -->
-    
+
     <div class="container-fluid text-center main">
         <div class="row">
             <div class="col-8" id="mainBody">
@@ -108,6 +108,39 @@
                 </div>
             </div>
         </div>
+
+        <!-- Carousel  -->
+
+        <section class="eventsCarousel container-fluid">
+            <div id="churchCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-pause="hover" data-bs-touch="true">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/fishermans.jpg" class="d-block carouselImages" alt="Fisherman's Cafe Poster">
+                        <div class="carousel-caption d-block">
+                            <h5><a src="#">Fisherman's Cafe</a></h5>
+                            <p>Thursdays 2:30 pm to 5:30pm, St Andrews Church Hall, 59 Albert Rd, Caversham, Reading RG4 7PL</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/inclusive.jpg" class="d-block carouselImages" alt="Inclusive Church Image">
+                        <div class="carousel-caption d-block">
+                            <h5><a src="#">Inclusive Church</a></h5>
+                            <p>Inclusive Church campaigns encourages the church to be inclusive to all</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="buttons carousel-control-prev" type="button" data-bs-target="#churchCarousel" data-bs-slide="prev">
+                  <span class="buttons carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="buttons carousel-control-next" type="button" data-bs-target="#churchCarousel" data-bs-slide="next">
+                  <span class="buttons carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </section>
+
+
     </div>
 
 </body>
