--- a/homePage.html
+++ b/homePage.html
@@ -140,6 +140,20 @@
               </div>
         </section>
 
+        <!-- Footer  -->
+
+        <section id="end">
+            <div class="container-fluid iconEnd">
+                <div class="icons">
+                <p>Connect with us on Social Media</p>
+                <a href="https://www.youtube.com/channel/UCAwIQjZJt3jYRZZOiTSVZcQ"><i class="fa-brands fa-youtube youtubeIcon fa-2xl"></i></a>
+                <a href="https://www.facebook.com/CavershamStA"><i class="fa-brands fa-facebook fa-2xl"></i>
+                <a href="https://twitter.com/CavershamStA"><i class="fa-brands fa-twitter fa-2xl"></i></a>
+                </div>
+            </div>
+        </section>
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     </div>
 
