servicesPage regualr services with cards

--- a/servicesPage.html
+++ b/servicesPage.html
@@ -62,5 +62,60 @@
             </nav>
         </div>
     </section>
+
+    <div>
+        <img class="candlesChurch" src="./images/Newcandles.jpg">
+    </div>
+
+    <div class="container-fluid text-left mainServices">
+        <div class="row justify-content-sm-center">
+            <div class="serviceSunday col-6">
+                <h2>Regular Services</h2>
+                <p>All of our Eucharistic services use Common Worship.</p>
+                <p>Please see also the church calendar for alterations to the usual pattern and for other events.</p>
+                <p>Jan 2022: At all services the wearing of masks and social distancing is now a matter of personal choice.</p>
+            </div>
+        </div>
+        <div class="row gx-4 serviceSunday">
+            <div class="col-4">
+                <div class = "card">
+                    <div class="card-header">
+                        <h4>Sunday</h4>
+                    </div>
+                    <div class="card-body">               
+                        <ul class = "servicesList">
+                            <li><b>8am: </b> Said Eucharist</li>
+                            <li><b>10am: </b> Sung Eucharist, also live-streamed on our YouTube channel.</li>
+                            <li>(If you attend in person it is possible to avoid appearing in the livestream.)</li>
+                            <li><b>11.30am: </b> BCP Eucharist - on the First Sunday of the Month only</li>
+                        </ul>
+                    </div>
+                </div>            
+            </div>
+            <div class="col-4" >
+                <div class = "card" id="serviceCentre">  
+                    <div class="card-header">
+                        <h4>Wednesday</h4>
+                    </div>   
+                    <div class="card-body">
+                        <p><b>8pm: </b>Compline</p>
+                    </div>                        
+                </div>
+            </div>
+            <div class="col-4">
+                <div class = "card">
+                    <div class="card-header">
+                        <h4>Saturday</h4>
+                    </div> 
+                    <div class="card-body">
+                        <p><b>9-9.30am: </b> Silent Prayer/Meditation </p>
+                        <p>This started as prayers for the Ukraine crisis and has evolved into a silent half hour together.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
