--- a/servicesPage.html
+++ b/servicesPage.html
@@ -115,6 +115,17 @@
             </div>
         </div>
     </div>
+    <div class="otherServices container-fluid text-left">
+        <div class="row justify-content-sm-center">
+            <div class="col-6">
+                <h2>Baptisms, Weddings and Funerals</h2>
+                <p>There is helpful guidance about baptism/christening here,
+                about church weddings here, and useful information about arranging a funeral here.</p>
+                <p> If you are thinking of getting baptised, or having your child baptised (or "christened"), or you are thinking about getting married in church, then please contact the vicar, who will be very pleased to discuss this with you.</p>
+                <p>If you need to arrange a funeral, it is usual to contact a funeral director first, but if you prefer to talk to the vicar first you are very welcome to get in touch.</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
