--- a/servicesPage.html
+++ b/servicesPage.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/1b640705a7.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/church.css">
     <link rel="icon" type="image/png" href="./images/church-icon.jpg">
 </head>
 <body>
@@ -62,5 +62,71 @@
             </nav>
         </div>
     </section>
+
+    <div>
+        <img class="candlesChurch" src="./images/Newcandles.jpg">
+    </div>
+
+    <div class="container-fluid text-left mainServices">
+        <div class="row justify-content-sm-center">
+            <div class="serviceSunday col-6">
+                <h2>Regular Services</h2>
+                <p>All of our Eucharistic services use Common Worship.</p>
+                <p>Please see also the church calendar for alterations to the usual pattern and for other events.</p>
+                <p>Jan 2022: At all services the wearing of masks and social distancing is now a matter of personal choice.</p>
+            </div>
+        </div>
+        <div class="row gx-4 serviceSunday">
+            <div class="col-4">
+                <div class = "card">
+                    <div class="card-header">
+                        <h4>Sunday</h4>
+                    </div>
+                    <div class="card-body">               
+                        <ul class = "servicesList">
+                            <li><b>8am: </b> Said Eucharist</li>
+                            <li><b>10am: </b> Sung Eucharist, also live-streamed on our YouTube channel.</li>
+                            <li>(If you attend in person it is possible to avoid appearing in the livestream.)</li>
+                            <li><b>11.30am: </b> BCP Eucharist - on the First Sunday of the Month only</li>
+                        </ul>
+                    </div>
+                </div>            
+            </div>
+            <div class="col-4" >
+                <div class = "card" id="serviceCentre">  
+                    <div class="card-header">
+                        <h4>Wednesday</h4>
+                    </div>   
+                    <div class="card-body">
+                        <p><b>8pm: </b>Compline</p>
+                    </div>                        
+                </div>
+            </div>
+            <div class="col-4">
+                <div class = "card">
+                    <div class="card-header">
+                        <h4>Saturday</h4>
+                    </div> 
+                    <div class="card-body">
+                        <p><b>9-9.30am: </b> Silent Prayer/Meditation </p>
+                        <p>This started as prayers for the Ukraine crisis and has evolved into a silent half hour together.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="otherServices container-fluid text-left">
+        <div class="row justify-content-sm-center">
+            <div class="col-6">
+                <h2>Baptisms, Weddings and Funerals</h2>
+                <p>There is helpful guidance about baptism/christening here,
+                about church weddings here, and useful information about arranging a funeral here.</p>
+                <p> If you are thinking of getting baptised, or having your child baptised (or "christened"), or you are thinking about getting married in church, then please contact the vicar, who will be very pleased to discuss this with you.</p>
+                <p>If you need to arrange a funeral, it is usual to contact a funeral director first, but if you prefer to talk to the vicar first you are very welcome to get in touch.</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
