--- a/homePage.html
+++ b/homePage.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/church.css">
     <link rel="icon" type="image/png" href="./images/church-icon.jpg">
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <section id="navigation">
@@ -115,29 +116,33 @@
             <div id="churchCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel" data-bs-interval="5000" data-bs-pause="hover" data-bs-touch="true">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/fishermans.jpg" class="d-block carouselImages" alt="Fisherman's Cafe Poster">
+                        <img src="images/fishermans.jpg" class="carouselImages" alt="Fisherman's Cafe Poster">
                         <div class="carousel-caption d-block">
                             <h5><a src="#">Fisherman's Cafe</a></h5>
                             <p>Thursdays 2:30 pm to 5:30pm, St Andrews Church Hall, 59 Albert Rd, Caversham, Reading RG4 7PL</p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img src="images/inclusive.jpg" class="d-block carouselImages" alt="Inclusive Church Image">
+                        <img src="images/inclusive.jpg" class="carouselImages" alt="Inclusive Church Image">
                         <div class="carousel-caption d-block">
                             <h5><a src="#">Inclusive Church</a></h5>
                             <p>Inclusive Church campaigns encourages the church to be inclusive to all</p>
                         </div>
                     </div>
                 </div>
+
                 <button class="buttons carousel-control-prev" type="button" data-bs-target="#churchCarousel" data-bs-slide="prev">
                   <span class="buttons carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
+
                 <button class="buttons carousel-control-next" type="button" data-bs-target="#churchCarousel" data-bs-slide="next">
                   <span class="buttons carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
-              </div>
+
+            </div>
         </section>
 
         <!-- Footer  -->
@@ -156,6 +161,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     </div>
-
 </body>
 </html>
